Small fix to search box area, prevent overlapping text on screens with smaller heights

--- a/Olog/public_html/static/css/style.scss
+++ b/Olog/public_html/static/css/style.scss
@@ -159,6 +159,7 @@ pre{
 		right:0;
 		height:$search-height;
 		z-index:502;
+		overflow-y:auto;
 		background-color:$gray-100;
 		display:block;
 		padding:5px;
